knative/ingress-production.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sprint-production
  namespace: knative-serving
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
      - websecure
    routes: 
      - match: HostRegexp(`{subdomain:(.*)}.production.apps.sprint.luchtenberg.eu`)
        kind: Rule
        services:
          - name: kourier-internal
            port: 80
    tls:
      secretName: prod-apps-sprint-luchtenberg-eu-tls
